# Deploytix

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  Disk-Populater.sh  LICENSE  LOGICAL_ERRORS_REPORT.md  Makefile  PLAN.md  README.md  SECUREBOOT_GRUB_SETUP.md  SURICATA_PLAN.md  TASK_LIST.md  build.rs  com.deploytix.gui.policy  deploytix-gui.desktop  deploytix.toml  install-kde-plasma.sh  package-lock.json
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
docs/: CONCEPTUAL_ERRORS_REVIEW.md  CRYPTTAB_HOOKS_DOCUMENTATION.md  CUSTOM_PARTITION_LAYOUT.md  DISK_SPACE_GUIDE.md  GRUB_BTRFS_FEASIBILITY.md  IMPROVEMENTS.md  INSTALLER_COMPARISON.md  INTEGRATION_GUIDE_CRYPTO_BTRFS.md  INTERACTIVE_INSTALLER.md  LINUX_DISTRIBUTION_CLASSIFICATION.md  NON_ARTIX_HOST_PLAN.md  NON_ARTIX_HOST_TASKS.md  PROJECT_OVERVIEW.md  REHEARSAL_LIVE_OUTPUT.md  Rehearsal Installation System.md  SECUREBOOT_GRUB_SETUP.md  SESSION_SWITCHING_REWORK.md  artix-runit-crypto-install-spec.md  deploytix-overview.md  deploytix-validation.md  test-coverage-proposal.md
iso/: README.md  build-deploytix-iso.sh  write-deploytix-usb.sh
iso/gamescope-pkg/: PKGBUILD
iso/repo/: deploytix-git-1.2.0.r0.g33b3e7c-1-x86_64.pkg.tar.zst
pkg/: PKGBUILD
ref/: Deploytix  Undeploytix.sh  artix-chroot  crypttab  hooks_crypttab-unlock  hooks_mountcrypt  install_crypttab-unlock  install_mountcrypt
scripts/: bootstrap.sh  release.sh
src/: gui_main.rs  lib.rs  main.rs
src-rehearsal/: main.rs
tests/: pkgdeps_integration.rs  preflight_integration.rs
(+126 files in other folders)
